# shallow-water

./: .gitignore  CMakeLists.txt  array2d.h  kernels.cu  kernels.impl.cu  mem.h  shallow.cpp  sloped.h  solver.h  solver_context.h  unknowns.h  vtk.cpp
cuda-helper/: README
